ingress/ingerss-tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    author: jobair
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: tomcat-pod
      labels:
        app: webserver
    spec: 
      containers:
        - name: tomcat-con
          image: tomcat
...
