ingress/ingress-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    creator: jobair
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: proxy
...
